# avail-subxt-light

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: error.rs  http.rs  rpc.rs
core/: Cargo.toml
core/src/types/: avail.rs  common.rs
example/: Cargo.toml
example/src/: main.rs
