[package]
name = "avail-subxt-light-client"
edition.workspace = true

[dependencies]
parity-scale-codec.workspace = true
hex.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true

jsonrpsee-http-client.workspace = true
jsonrpsee-core.workspace = true

# Local dependencies
sdk-core.workspace = true