[package]
name = "avail-subxt-light-client"
edition.workspace = true
license.workspace = true
publish = true
version = "0.1.0"

[dependencies]
parity-scale-codec.workspace = true
hex.workspace = true
tokio.workspace = true
serde_json.workspace = true
serde.workspace = true

jsonrpsee-http-client.workspace = true
jsonrpsee-core.workspace = true

# Local dependencies
sdk-core.workspace = true