[package]
name = "avail-subxt-light-core"
edition.workspace = true

[dependencies]
parity-scale-codec.workspace = true
hex.workspace = true
blake2b_simd.workspace = true
serde.workspace = true
primitive-types.workspace = true

# Crypto
schnorrkel.workspace = true
secrecy.workspace = true
regex-lite.workspace = true
bip39.workspace = true
pbkdf2.workspace = true
hmac.workspace = true
sha2.workspace = true
ss58-registry.workspace = true
bs58.workspace = true
blake2.workspace = true